corpus/c/syntax/case-01/snapshots/gcc15/render.default.txt
error: syntax error
--> src/main.c:2:13
help: fix the first parser error at the user-owned location
why: expected ';' before '}}' token
| src/main.c:2:13
|     return 0
|             ^
other errors:
  - src/main.c:2:13: error: syntax error
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output